Current working version

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,18 +14,31 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
         </activity>
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings" />
+            android:label="@string/title_activity_settings"
+            />
+
+
         <activity android:name=".QuestionStartScreen" />
         <activity android:name=".QuestionAsking" />
         <activity android:name=".AnswerCorrect" />
         <activity android:name=".AnswerIncorrect" />
         <activity android:name=".Victory" />
         <activity android:name=".Retry"/>
-        <activity android:name=".Listening"/>
+        <activity android:name=".Listening">
+
+            <intent-filter>
+
+
+                <category android:name="android.intent.category.LAUNCHER" />
+
+            </intent-filter>
+            </activity>
+
     </application>
 
 </manifest>
