minor cleanups, also fixed the gear

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,23 +21,8 @@
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
             />
-
-
-        <activity android:name=".QuestionStartScreen" />
-        <activity android:name=".QuestionAsking" />
-        <activity android:name=".AnswerCorrect" />
-        <activity android:name=".AnswerIncorrect" />
         <activity android:name=".Victory" />
-        <activity android:name=".Retry"/>
-        <activity android:name=".Listening">
-
-            <intent-filter>
-
-
-                <category android:name="android.intent.category.LAUNCHER" />
-
-            </intent-filter>
-            </activity>
+        <activity android:name=".Listening"/>
 
     </application>
 
