--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ac.csun.team3">
-    <uses-permission android:name="android.permission.VIBRATE"/>
+
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -14,31 +15,23 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-
             </intent-filter>
         </activity>
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"
-            />
-
-
+            android:label="@string/title_activity_settings" />
         <activity android:name=".QuestionStartScreen" />
         <activity android:name=".QuestionAsking" />
         <activity android:name=".AnswerCorrect" />
         <activity android:name=".AnswerIncorrect" />
         <activity android:name=".Victory" />
-        <activity android:name=".Retry"/>
+        <activity android:name=".Retry" />
         <activity android:name=".Listening">
-
             <intent-filter>
-
-
                 <category android:name="android.intent.category.LAUNCHER" />
-
             </intent-filter>
-            </activity>
-
+        </activity>
+        <activity android:name=".Defeat"></activity>
     </application>
 
 </manifest>
